# GAsm

./: .gitignore  CMakeLists.txt  GAsm.cpp  GAsm.h  GAsmParser.cpp  GAsmParser.h  GP.cpp  GP.h  README.md  asm.txt  data_generators.py  example.py  final.ipynb  main.cpp  presentation.ipynb  setup.py  test.py  test2.py  train.py  utils.py
data/: 2026-01-12_20-09-12.json  asm.gasm  asm.txt  example.json  example_1B.json  example_1B_1.json  example_1B_2.json  example_1B_3.json  example_1_2_C_1.json  example_1_2_D_1.json  example_1_2_E_1.json  example_1_3_A_1.json  example_1_4_A_1.json  example_final_problems_3_03.json  example_final_problems_bool_05.json  fib.gasm  final_bool_04.json  test.json
example_data/: example_1_2_D_2.json
examples/cpp/: CMakeLists.txt  fib_learn.h  jit_moves.cpp  jit_moves.h  main.cpp  tests.cpp  tests.h
examples/python/: test.py
final_data/: example_final_problems_21_01.json  example_final_problems_28_01.json  example_final_problems_bool_01.json  example_final_problems_bool_02.json  example_final_problems_bool_03.json  example_final_problems_bool_04.json  example_final_radom_mul.json  random.json  random_random.json
gasm/: CMakeLists.txt
gasm/include/: Entry.h  GAsm.h  GAsmInterpreter.h  GAsmParser.h  Hist.h  Individual.h  Runner.h  functions.h  utils.h
gasm/python/: CMakeLists.txt  EntryPython.cpp  EntryPython.h  GasmModule.cpp  GasmModule.h  GasmPython.cpp  GasmPython.h  HistPython.cpp  HistPython.h  IndividualPython.cpp  IndividualPython.h  __init__.py  gasm.py  gasm.pyi  utils.cpp  utils.h
gasm/src/: Entry.cpp  GAsm.cpp  GAsmCompiler.cpp  GAsmInterpreter.cpp  GAsmParser.cpp  GP.cpp  Hist.cpp  Individual.cpp  Runner.cpp  compiler.md  functions.cpp
include/: Entry.h  GAsm.h  GAsmInterpreter.h  GAsmParser.h  Hist.h  fib_learn.h  functions.h  tests.h
src/: Entry.cpp  GAsm.cpp  GAsmCompiler.cpp  GAsmInterpreter.cpp  GAsmParser.cpp  compiler.md  functions.cpp  jit_moves.cpp  tests.cpp
